--- a/ptzc/bilibili/综合规范公告.md
+++ b/ptzc/bilibili/综合规范公告.md
@@ -6,19 +6,19 @@
 
 
 
-       为了维护哔哩哔哩直播生态保障用户财产安全，平台严厉打击涉博彩诈骗及其相关玩法广告的行为，包括但不限于：
+为了维护哔哩哔哩直播生态保障用户财产安全，平台严厉打击涉博彩诈骗及其相关玩法广告的行为，包括但不限于：
 
-       1）宣传涉博彩、赌博内容或发布相关引流广告；
+1）宣传涉博彩、赌博内容或发布相关引流广告；
 
-       2）通过以“爆奖返现、红包返现”的形式恶意诱导用户进行不理性的充值投喂；
+2）通过以“爆奖返现、红包返现”的形式恶意诱导用户进行不理性的充值投喂；
 
-       3）使用网络游戏（抽卡、开箱）机制变现返现或发布相关引流广告；
+3）使用网络游戏（抽卡、开箱）机制变现返现或发布相关引流广告；
 
-       4）发布网络游戏代练代抽、刷钻、购买礼包码、游戏币等诱导私下交易的广告信息。
+4）发布网络游戏代练代抽、刷钻、购买礼包码、游戏币等诱导私下交易的广告信息。
 
-       2023年3月至今累计处罚违规直播间1974起，封禁违规账号11463名。恳请用户请谨慎判断，请勿轻信广告信息以免上当受骗。
+2023年3月至今累计处罚违规直播间1974起，封禁违规账号11463名。恳请用户请谨慎判断，请勿轻信广告信息以免上当受骗。
 
-       希望各位主播和观众姥爷们能尊重并遵守平台规则，共同维护哔哩哔哩直播的生态秩序、打造更公平的直播环境，感谢！
+希望各位主播和观众姥爷们能尊重并遵守平台规则，共同维护哔哩哔哩直播的生态秩序、打造更公平的直播环境，感谢！
 
 
 哔哩哔哩直播运营团队
@@ -30,21 +30,21 @@
 
 
 
-       为了维护哔哩哔哩直播生态，给主播和观众姥爷们带来更好的直播以及观看体验，平台即将对直播挂机录播等无意义内容的直播间进行专项治理。
+为了维护哔哩哔哩直播生态，给主播和观众姥爷们带来更好的直播以及观看体验，平台即将对直播挂机录播等无意义内容的直播间进行专项治理。
 
-       直播挂机录播内容包括但不限于：
+直播挂机录播内容包括但不限于：
 
-       1）循环播放录制的音视频或直播回放 ；
+1）循环播放录制的音视频或直播回放 ；
 
-       2）直播获得授权的音视频时无真人或虚拟形象出镜且无互动行为；
+2）直播获得授权的音视频时无真人或虚拟形象出镜且无互动行为；
 
-       3）直播画面为黑屏或静帧且无互动行为；
+3）直播画面为黑屏或静帧且无互动行为；
 
-       4）直播睡觉等其他挂机录播行为。
+4）直播睡觉等其他挂机录播行为。
 
-       平台鼓励广大主播积极地与观众互动，也欢迎观众姥爷们对挂机录播等无意义内容的直播间进行实时举报，一起维护哔哩哔哩直播生态，并且感谢大家一直以来的大力支持！
+平台鼓励广大主播积极地与观众互动，也欢迎观众姥爷们对挂机录播等无意义内容的直播间进行实时举报，一起维护哔哩哔哩直播生态，并且感谢大家一直以来的大力支持！
 
-       希望各位主播能尊重并遵守平台规则，共同维护哔哩哔哩直播的生态秩序、打造更公平的直播环境，感谢！
+希望各位主播能尊重并遵守平台规则，共同维护哔哩哔哩直播的生态秩序、打造更公平的直播环境，感谢！
 
 
 
@@ -226,3 +226,118 @@ Q4：3D虚拟主播分区开播要求
 （3） 其他本行为规则、在线协议和平台规则认定属于情节严重的情形。
 
 3. 本规范自发布之日起生效。
+
+# 电台分区直播内容规范
+
+为维护bilibili直播电台分区内容质量，特制定电台分区直播内容规范，适用于电台分区各品类的所有下属直播间。  
+目前电台分区下，各子分区分别为：唱见电台，聊天电台，配音（排名不分先后）  
+ 
+
+### 一、 直播内容规范
+
+  
+
+#### 1\. 唱见电台
+
+  
+1.1 直播内容：观众老爷点歌、歌单列表依序唱歌、连麦合唱等，歌曲演唱形式及风格不限；  
+1.2 直播期间，每首歌曲演唱间隔不超过10分钟；上推荐期间，每首歌曲演唱间隔不超过5分钟；  
+ 
+
+#### 2\. 聊天电台
+
+  
+2.1 有主题性的进行聊天内容直播；可使用连麦功能与粉丝互动。  
+2.2 按照分区子标签进行聊天话题互动
+
+ 
+
+#### 3\. 配音电台
+
+ 
+
+3.1【有声漫类主播 】直播内容：主播直播由官方提供的有声漫画（每周会以表格的形式给到主播）  
+3.2【pia戏类主播】直播内容：主播个人或者与其他主播联合演绎广播剧本子（广播剧本子需要原创或获得原创作者授权）  
+3.3【有声故事类主播】直播内容：主播直播分享美文/故事/绘本等内容（文字内容需要原创或获得原创作者授权）  
+3.4 直播内容要求：为确保直播内容质量，主播在配音电台区直播，中场休息时间不超过10分钟
+
+注意事项：
+
+请电台区主播务必遵守以上规范，直播与分区相关的内容。如发现直播内容不符者，审核老师将把直播间切换至其内容对应的分区。
+
+### 二、 开播基本要求
+
+ 
+
+1\. 请自觉遵守平台规则与[bilibili主播直播规范V2.3](https://link.bilibili.com/p/eden/news#/newsdetail?id=135)；  
+2\. 电台区仅限语音直播；  
+3\. 直播前必须上传直播封面且封面必须符合bilibili直播封面规范，详情可参考-封面规范教程；  
+4\. 严禁挂机、录播；  
+5\. 禁止多平台同时直播；  
+6\. 禁止直播间及简介出现竞品平台相关内容
+
+各位主播大大需严格依据直播内容进行分区选择，遵守以上电台分区直播规范，打造良好的直播环境，祝大家在bilibili直播玩的开心！\~
+
+ 
+
+哔哩哔哩直播运营团队
+
+# 关于加强管理户外直播内容行为规范公告
+
+哔哩哔哩直播针对户外直播行为的监督管理规定，严格要求主播遵守法律法规，请全体哔哩哔哩直播用户与主播配合。具体要求如下：
+
+一、禁止机动车驾驶员在行车途中直播。
+
+二、禁止任何可能涉及侵犯公民个人隐私的直播。
+
+三、禁止直播可能会造成人身安全的自然灾害或社会突发事件。（包括但不限于台风、地震、火灾、车祸等）
+
+四、其他违反国家法律法规或社会公德的内容。
+
+ 
+
+违反以上行为规范的主播，我们将进行严厉的处罚，情节严重者将上报有关部门。请各位主播严格遵守《bilibili主播直播规范V2.3》，也请各位用户对我们进行监督，发现此类违规行为及时与我们联系或直接点击直播间举报按钮。
+
+ 
+
+bilibili主播直播规范V2.3：https://link.bilibili.com/p/eden/news#/newsdetail?id=135
+
+# 未成年人保护声明
+
+亲爱的主播和观众姥爷：
+
+
+
+哔哩哔哩直播作为国内首家关注ACG的直播平台，一直很重视对所有用户的保护，尤其是对未成年人的保护。
+
+
+
+最近，未成年人网络直播的相关话题引起了大家的关注。作为直播行业的一员，哔哩哔哩直播将坚持绿色直播，严格遵守法律法规，维护平台秩序，为大家营造一个良好的直播环境。
+
+
+
+首先，哔哩哔哩直播严令禁止任何影响未成年人健康成长的内容，通过技术加人工的方式严格审核，确保内容安全和运营安全。针对未成年人打赏，平台明确禁止，并禁止主播诱导未成年打赏行为。切实采取有效措施开展自查自纠，完善平台内部管理直播和审核机制。
+
+
+
+与此同时，我们将加大宣传教育，在信息安全、技术防范、内容引导、充值付费、反馈渠道等各个方面进行改进，做好未成年保护。
+
+
+
+直播姬和大家一起，共同努力营造一个健康和谐的网络空间。
+
+
+
+哔哩哔哩直播
+
+# 关于禁播游戏的公告
+
+各位主播和观众姥爷，
+
+ 
+
+bilibili直播即日起，停播以下游戏：
+
+ 
+
+《H1Z1》、《僵尸生存大战》、《求生之路系列》、《侠盗猎车手系列（GTA）》、《血染小镇》、《黎明杀机》、《上古卷轴系列》、《战地3》、《战地4》、《如龙系列》、《彩虹六号围攻》、《恶灵附身》、《真人快打》、《十三号黑色星期五》、《热血无赖》、《Kio的人间冒险》、《逃生、逃生2》、《战锤：末世鼠疫2》、《死亡空间》、《舰队Collection》、《钢铁雄心》、《模拟外科医生》、《痛苦地狱（Agony）》、《心跳文学部》、《病娇模拟器》、《黑暗之魂系列》、《最后生还者1》、《闪乱神乐》、《超杀：行尸走肉》、《杀戮空间》、《还愿》、《返校》、《恐惧之夜》、《死或生》、《杀手6》、《七日杀》、《审判之眼》、《古墓丽影9》、《鬼畜天线宝宝》、《冷战热斗》、《屁股模拟器》、《我的上周五》、《灭火器-烤杯的火焰》、《使命召唤：现代战争》（剧情模式）、《坦克世界亚服》、《文明时代》、《瘟疫公司》、《赤毒》、《逆统战》、《巫师3》、《舰队大作战2》、《国家统治者系列》、《奇异人生：本色》、《生化危机1》、《生化危机5》、《生化危机6》、《生化危机7》、《生化危机8》、《喋血复仇》、《visage》等，以及所有非全年龄GALGAME。
